--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -29,4 +29,7 @@
 }
 .footer .footer--reach-me .footer--social:hover .footer--social-icon {
   scale: 1.1;
+}
+.footer .footer--creator {
+  margin-left: 20px;
 }/*# sourceMappingURL=Footer.css.map */
