--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -12,13 +12,16 @@
   background-repeat: no-repeat;
   background-position: 60% 50%;
 }
+.hero .hero--subtitle,
+.hero .hero--title {
+  max-width: 550px;
+  width: auto;
+}
 .hero .hero--subtitle {
-  width: 550px;
   font-family: "Quicksand", sans-serif;
   font-size: 20px;
 }
 .hero .hero--title {
-  width: 550px;
   font-family: "Oswald", sans-serif;
   font-weight: 400;
   font-size: 65px;
