--- a/src/components/WhatIOffer/WhatIOffer.css
+++ b/src/components/WhatIOffer/WhatIOffer.css
@@ -1,5 +1,5 @@
 .offers {
-  height: 100vh;
+  padding-top: 80px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -23,13 +23,15 @@
 .offers .offers--main-container {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 50px;
 }
 .offers .offers--main-container .offers--offer {
-  width: 150px;
+  min-width: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  flex-basis: 25%;
   font-family: "Quicksand", sans-serif;
 }
 .offers .offers--main-container .offers--offer .offers--icon {
