--- a/src/components/WhatIOffer/WhatIOffer.scss
+++ b/src/components/WhatIOffer/WhatIOffer.scss
@@ -1,5 +1,5 @@
 .offers {
-  height: 100vh;
+  padding-top: 80px;
 
   display: flex;
   flex-direction: column;
@@ -26,13 +26,15 @@
   .offers--main-container {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 50px;
     .offers--offer {
-      width: 150px;
+      min-width: 200px;
 
       display: flex;
       flex-direction: column;
       align-items: center;
+      flex-basis: 25%;
 
       font-family: "Quicksand", sans-serif;
       .offers--icon {
