--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -1,5 +1,5 @@
 .blog {
-  height: 100vh;
+  padding-top: 80px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -49,4 +49,9 @@
 }
 .blog .blog--articles .blog--article:hover {
   scale: 1.05;
+}
+@media screen and (max-width: 865px) {
+  .blog .blog--articles {
+    flex-direction: column;
+  }
 }/*# sourceMappingURL=Blog.css.map */
