--- a/src/components/FAQ/FAQ.scss
+++ b/src/components/FAQ/FAQ.scss
@@ -1,4 +1,5 @@
 .faq {
+  padding-top: 80px;
   height: auto;
   display: flex;
   flex-direction: column;
@@ -14,7 +15,7 @@
   .faq--question-container,
   .faq--question-container-active {
     width: auto;
-    height: 50px;
+    height: auto;
 
     margin-bottom: 20px;
     padding: 10px 30px;
@@ -33,6 +34,8 @@
     .faq--close {
       width: auto;
       max-height: 80%;
+      max-width: 8%;
+      margin-left: 20px;
     }
     .faq--close {
       transform: rotate(180deg);
@@ -57,7 +60,7 @@
     border-bottom-right-radius: 10px;
 
     overflow: hidden;
-    transition: max-height 1.5s ease;
+    transition: max-height 0.8s ease-in-out;
   }
   .faq--answer {
     padding: 20px;
