--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,4 +1,4 @@
-nav {
+.navbar {
   width: 100%;
   height: 80px;
   padding: 0 30px 0 30px;
@@ -10,24 +10,26 @@ nav {
   font-weight: 600;
   color: #bf9773;
 }
-nav .nav--name {
+.navbar .nav--name {
   font-size: 20px;
+  margin-right: 15px;
 }
-nav .nav--primary {
+.navbar .nav--primary {
   display: flex;
   align-items: center;
   gap: 13px;
   font-size: 18px;
+  transition: 0.4s ease-in-out;
 }
-nav .nav--primary .nav--anchors .nav--anchor {
+.navbar .nav--primary .nav--anchors .nav--anchor {
   margin-right: 30px;
   transition-duration: 0.2s;
   transition-timing-function: ease-in-out;
 }
-nav .nav--primary .nav--anchors .nav--anchor:hover {
+.navbar .nav--primary .nav--anchors .nav--anchor:hover {
   color: rgb(63, 63, 63);
 }
-nav .nav--primary .nav--book-appointment-btn {
+.navbar .nav--primary .nav--book-appointment-btn {
   height: 50px;
   padding: 13px;
   background-color: #bf9773;
@@ -38,10 +40,59 @@ nav .nav--primary .nav--book-appointment-btn {
   transition-duration: 0.2s;
   transition-timing-function: ease-in-out;
 }
-nav .nav--primary .nav--book-appointment-btn:hover {
+.navbar .nav--primary .nav--book-appointment-btn:hover {
   background-color: #dbb898;
 }
-nav .logged-in {
+.navbar .hiddenMenuIcon {
+  display: none;
+  cursor: pointer;
+}
+.navbar .hiddenMenuIcon:hover {
+  color: #dbb898;
+  transition: 0.2s ease-in-out;
+}
+@media screen and (max-width: 865px) {
+  .navbar .nav--primary {
+    position: absolute;
+    top: 5.3em;
+    left: 0;
+    width: 100%;
+    height: 0em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    overflow: hidden;
+  }
+  .navbar .nav--primary .nav--anchors {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 20px;
+  }
+  .navbar .nav--primary .nav--anchors .nav--anchor {
+    margin-bottom: 10px;
+    margin-right: 0;
+  }
+  .navbar .hiddenMenuIcon {
+    display: block;
+  }
+  .navbar .nav--open {
+    height: 18em;
+    background-color: #eedfc9;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .navbar .nav--name {
+    font-size: 16px;
+  }
+  .navbar .nav--primary {
+    font-size: 15px;
+  }
+  .navbar .nav--primary .nav--book-appointment-btn {
+    font-size: 16px;
+  }
+}
+.navbar .logged-in {
   position: absolute;
   top: 100px;
   padding: 10px;
@@ -49,9 +100,9 @@ nav .logged-in {
   border-radius: 20px;
   color: black;
 }
-nav .logged-in:hover {
+.navbar .logged-in:hover {
   background-color: #eedfc9;
 }
-nav .logged-in:hover:before {
+.navbar .logged-in:hover:before {
   content: "Logout ";
 }/*# sourceMappingURL=NavBar.css.map */
