--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,4 +1,4 @@
-nav {
+.navbar {
   width: 100%;
   height: 80px;
 
@@ -16,6 +16,7 @@ nav {
   color: #bf9773;
   .nav--name {
     font-size: 20px;
+    margin-right: 15px;
   }
   .nav--primary {
     display: flex;
@@ -23,6 +24,7 @@ nav {
     gap: 13px;
 
     font-size: 18px;
+    transition: 0.4s ease-in-out;
     .nav--anchors {
       .nav--anchor {
         margin-right: 30px;
@@ -50,6 +52,61 @@ nav {
     }
     .nav--book-appointment-btn:hover {
       background-color: #dbb898;
+    }
+  }
+
+  .hiddenMenuIcon {
+    display: none;
+    cursor: pointer;
+  }
+
+  .hiddenMenuIcon:hover {
+    color: #dbb898;
+    transition: 0.2s ease-in-out;
+  }
+
+  @media screen and (max-width: 865px) {
+    .nav--primary {
+      position: absolute;
+      top: 5.3em;
+      left: 0;
+      width: 100%;
+      height: 0em;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      overflow: hidden;
+      .nav--anchors {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-size: 20px;
+        .nav--anchor {
+          margin-bottom: 10px;
+          margin-right: 0;
+        }
+      }
+    }
+
+    .hiddenMenuIcon {
+      display: block;
+    }
+
+    .nav--open {
+      height: 18em;
+      background-color: #eedfc9;
+    }
+  }
+  @media screen and (max-width: 1000px) {
+    .nav--name {
+      font-size: 16px;
+    }
+    .nav--primary {
+      font-size: 15px;
+      .nav--book-appointment-btn {
+        font-size: 16px;
+      }
     }
   }
   .logged-in {
