--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -16,28 +16,44 @@
       font-size: 20px;
       font-weight: 600;
     }
-    .footer--social {
-      width: 40px;
-      text-align: center;
-
+    .footer--social-icons {
       display: flex;
-      flex-direction: column;
-      align-items: center;
+      gap: 40px;
+      .footer--social {
+        width: 40px;
+        text-align: center;
 
-      cursor: pointer;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
-      .footer--social-icon {
-        filter: invert(86%) sepia(10%) saturate(2300%) hue-rotate(331deg)
-          brightness(72%) contrast(97%);
-        transition-duration: 0.2s;
-        transition-timing-function: ease-in-out;
+        cursor: pointer;
+
+        .footer--social-icon {
+          filter: invert(86%) sepia(10%) saturate(2300%) hue-rotate(331deg)
+            brightness(72%) contrast(97%);
+          transition-duration: 0.2s;
+          transition-timing-function: ease-in-out;
+        }
+      }
+      .footer--social:hover .footer--social-icon {
+        scale: 1.1;
       }
     }
-    .footer--social:hover .footer--social-icon {
-      scale: 1.1;
+    @media screen and (max-width: 865px) {
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
     }
   }
   .footer--creator {
     margin-left: 20px;
+  }
+  @media screen and (max-width: 865px) {
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+
+    text-align: center;
   }
 }
