--- a/src/components/Subscribe/Subscribe.scss
+++ b/src/components/Subscribe/Subscribe.scss
@@ -20,6 +20,7 @@
   }
   .subscribe--form {
     display: flex;
+    justify-content: center;
     gap: 40px;
     width: 100%;
     input {
@@ -56,7 +57,6 @@
     }
     @media screen and (max-width: 865px) {
       flex-direction: column;
-      max-width: 50%;
       gap: 20px;
     }
   }
