--- a/src/components/Appointment/Appointment.scss
+++ b/src/components/Appointment/Appointment.scss
@@ -1,5 +1,7 @@
 .appointment {
-  margin: 80px 0;
+  max-width: 960px;
+  max-height: 700px;
+  margin: 80px auto;
 
   display: flex;
   flex-direction: column;
@@ -19,14 +21,15 @@
     margin-bottom: 30px;
 
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     gap: 23px;
     .appointment--current-week-date {
       font-size: 22px;
     }
     .prev-week-btn,
     .next-week-btn {
-      min-width: 70px;
+      min-width: 150px;
+      min-height: 45px;
 
       padding: 10px;
 
@@ -42,6 +45,10 @@
       transition-duration: 0.2s;
       transition-timing-function: ease-in-out;
     }
+    .prev-week-btn:hover,
+    .next-week-btn:hover {
+      background-color: #dbb898;
+    }
 
     .prev-week-btn[disabled] {
       opacity: 60%;
@@ -52,13 +59,19 @@
     }
   }
   .appointment--container {
+    width: 100%;
     display: flex;
     justify-content: center;
-    gap: 30px;
+    overflow: hidden;
+    border-radius: 8px;
+
     .appointment--fulldate {
+      padding: 20px 0;
       display: flex;
       flex-direction: column;
       align-items: center;
+      flex-grow: 1;
+      flex-basis: 0;
       .year-no-display {
         display: none;
       }
@@ -81,9 +94,11 @@
         font-size: 18px;
       }
       .appointment--hours {
-        min-width: 70px;
+        width: 60%;
 
         padding: 5px;
+
+        background-color: white;
 
         border: 1px solid #bf9773;
         border-radius: 5px;
@@ -104,6 +119,65 @@
         cursor: default;
         pointer-events: none;
         border: 1px solid rgb(185, 183, 183);
+      }
+    }
+    .appointment--fulldate:nth-child(odd) {
+      background-color: #f7f2eb;
+    }
+    @media screen and (max-width: 865px) {
+      overflow-x: auto;
+      .appointment--fulldate {
+        width: 30px;
+      }
+    }
+  }
+  @media screen and (max-width: 1100px) {
+    margin: 0 auto 30px auto;
+    transform: scale(0.9);
+    transition: transform 0.5s ease-in-out;
+  }
+  @media screen and (max-width: 980px) {
+    transform: scale(0.9);
+    transition: transform 0.5s ease-in-out;
+  }
+  @media screen and (max-width: 865px) {
+    max-width: 800px;
+  }
+  @media screen and (max-width: 800px) {
+    max-width: 560px;
+    max-height: 1000px;
+    transition: max-width, max-height 0.5s ease-in-out;
+
+    .appointment--change-week {
+      align-items: center;
+      .appointment--current-week-date {
+        max-width: 250px;
+        text-align: center;
+        font-size: 20px;
+      }
+      .prev-week-btn,
+      .next-week-btn {
+        max-height: 50px;
+        max-width: 80px;
+      }
+    }
+
+    .appointment--container {
+      justify-content: flex-start;
+      .appointment--fulldate {
+        min-width: 25%;
+      }
+      margin: auto;
+    }
+  }
+  @media screen and (max-width: 580px) {
+    margin: 0 30px;
+    .appointment--change-week {
+      flex-direction: column;
+    }
+    .appointment--container {
+      .appointment--fulldate {
+        min-width: 50%;
       }
     }
   }
