--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -58,6 +58,7 @@
     left: 0;
     width: 100%;
     height: 0em;
+    z-index: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -75,6 +76,7 @@
   }
   .navbar .hiddenMenuIcon {
     display: block;
+    width: 40px;
   }
   .navbar .nav--open {
     height: 18em;
