--- a/src/components/Appointment/Appointment.scss
+++ b/src/components/Appointment/Appointment.scss
@@ -170,6 +170,12 @@
       margin: auto;
     }
   }
+  @media screen and (max-width: 455px) {
+    .appointment--title {
+      scale: 0.856;
+      transition: scale 0.8s;
+    }
+  }
   @media screen and (max-width: 580px) {
     margin: 0 30px;
     .appointment--change-week {
