--- a/src/components/RegContact/RegContact.css
+++ b/src/components/RegContact/RegContact.css
@@ -55,6 +55,7 @@
 .regContact .contacts--send-email input::-webkit-outer-spin-button,
 .regContact .contacts--send-email input::-webkit-inner-spin-button {
   -webkit-appearance: none;
+          appearance: none;
   margin: 0;
 }
 .regContact .contacts--send-email input:focus,
@@ -78,17 +79,24 @@
 }
 .regContact .back-to-appointment-btn {
   height: 50px;
-  margin-top: 30px;
+  margin-bottom: 30px;
   padding: 13px;
-  background-color: #bf9773;
+  border: 1px solid #bf9773;
   border-radius: 6px;
   font-family: "Quicksand", sans-serif;
   font-weight: 600;
   font-size: 18px;
-  color: white;
+  color: #bf9773;
   transition-duration: 0.2s;
   transition-timing-function: ease-in-out;
 }
 .regContact .back-to-appointment-btn:hover {
-  background-color: #dbb898;
+  background-color: #bf9773;
+  color: white;
+}
+@media screen and (max-width: 455px) {
+  .regContact {
+    scale: 0.77;
+    margin: -60px 10px;
+  }
 }/*# sourceMappingURL=RegContact.css.map */
