--- a/src/components/RegContact/RegContact.scss
+++ b/src/components/RegContact/RegContact.scss
@@ -65,7 +65,7 @@
     }
     input::-webkit-outer-spin-button,
     input::-webkit-inner-spin-button {
-      -webkit-appearance: none;
+      appearance: none;
       margin: 0;
     }
     input:focus,
@@ -95,21 +95,27 @@
   .back-to-appointment-btn {
     height: 50px;
 
-    margin-top: 30px;
+    margin-bottom: 30px;
     padding: 13px;
 
-    background-color: #bf9773;
+    border: 1px solid #bf9773;
     border-radius: 6px;
 
     font-family: "Quicksand", sans-serif;
     font-weight: 600;
     font-size: 18px;
-    color: white;
+    color: #bf9773;
 
     transition-duration: 0.2s;
     transition-timing-function: ease-in-out;
   }
   .back-to-appointment-btn:hover {
-    background-color: #dbb898;
+    background-color: #bf9773;
+    color: white;
+  }
+  @media screen and (max-width: 455px) {
+    scale: 0.77;
+
+    margin: -60px 10px;
   }
 }
