--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,7 +1,7 @@
 .hero {
   width: 100%;
-  height: 95vh;
-  padding: 0 30px 0 30px;
+  min-height: 95vh;
+  padding: 110px 30px 50px 30px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -44,13 +44,6 @@
 .hero .hero--aboutme-btn:hover,
 .hero .hero--book-appointment-btn:hover {
   background-color: #dbb898;
-}
-@media screen and (max-width: 420px) {
-  .hero {
-    height: auto;
-    padding-top: 110px;
-    padding-bottom: 50px;
-  }
 }
 @media screen and (max-width: 800px) {
   .hero {
