--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,8 +1,8 @@
 .hero {
   width: 100%;
-  height: 95vh;
+  min-height: 95vh;
 
-  padding: 0 30px 0 30px;
+  padding: 110px 30px 50px 30px;
 
   display: flex;
   flex-direction: column;
@@ -52,12 +52,6 @@
   .hero--aboutme-btn:hover,
   .hero--book-appointment-btn:hover {
     background-color: #dbb898;
-  }
-
-  @media screen and (max-width: 420px) {
-    height: auto;
-    padding-top: 110px;
-    padding-bottom: 50px;
   }
 
   @media screen and(max-width:800px) {
