--- a/src/components/ScrollToTop/ScrollToTop.scss
+++ b/src/components/ScrollToTop/ScrollToTop.scss
@@ -1,17 +1,24 @@
 .to-top:hover .to-top-btn {
   scale: 1.2;
-  opacity: 1;
 }
 
-.to-top-btn {
+.to-top-btn,
+.to-top-text {
   position: fixed;
-  bottom: 20px;
-  right: 15px;
+  right: 20px;
+  bottom: 6px;
   cursor: pointer;
-  opacity: 0.7;
+}
+.to-top-btn {
+  bottom: 30px;
+  right: 30px;
 
   transition-duration: 0.2s;
   transition-timing-function: ease-in-out;
   filter: invert(86%) sepia(10%) saturate(2300%) hue-rotate(331deg)
     brightness(72%) contrast(97%);
+}
+
+.to-top-text {
+  color: #bf9773;
 }
