some new improvements for navigation& appointment

--- a/src/components/Appointment/Appointment.css
+++ b/src/components/Appointment/Appointment.css
@@ -64,9 +64,6 @@
   flex-grow: 1;
   flex-basis: 0;
 }
-.appointment .appointment--container .appointment--fulldate .year-no-display {
-  display: none;
-}
 .appointment .appointment--container .appointment--fulldate .appointment--month {
   font-family: "Quicksand", sans-serif;
   font-weight: 400;
@@ -104,6 +101,12 @@
   background-color: lightgray;
   cursor: default;
   pointer-events: none;
+  border: 1px solid rgb(185, 183, 183);
+}
+.appointment .appointment--container .appointment--fulldate .admin-disable {
+  opacity: 60%;
+  color: grey;
+  background-color: rgb(175, 174, 174);
   border: 1px solid rgb(185, 183, 183);
 }
 .appointment .appointment--container .appointment--fulldate:nth-child(odd) {
