--- a/src/components/Appointment/Appointment.scss
+++ b/src/components/Appointment/Appointment.scss
@@ -172,38 +172,55 @@
       }
       margin: auto;
     }
+
+    .admin-btns {
+      flex-direction: column;
+      align-items: center;
+    }
   }
 
-  .admin-disable-selected-btn {
-    width: max-content;
+  .admin-btns {
+    margin: 50px auto 0;
 
-    margin: 50px auto 0 auto;
-    padding: 20px;
+    display: flex;
+    gap: 30px;
 
-    color: white;
-    font-family: "Quicksand", sans-serif;
-    font-weight: 600;
-    font-size: 24px;
-    background-color: #b5320b;
-    border: solid 3px transparent;
-    border-radius: 5px;
+    .admin-disable-selected-btn,
+    .admin-show-dates-btn {
+      width: max-content;
 
-    text-align: center;
+      padding: 20px;
 
-    transition-duration: 0.3s;
-    transition-timing-function: ease-in-out;
-  }
-  .admin-disable-selected-btn:hover {
-    color: white;
-    border: solid 3px #b5330b88;
-    background-color: #b5330b88;
-  }
-  .admin-disable-selected-btn[disabled] {
-    opacity: 60%;
-    color: grey;
-    background-color: lightgray;
-    cursor: auto;
-    border: solid 3px transparent;
+      color: white;
+      font-family: "Quicksand", sans-serif;
+      font-weight: 600;
+      font-size: 24px;
+
+      border-radius: 5px;
+
+      text-align: center;
+
+      transition-duration: 0.3s;
+      transition-timing-function: ease-in-out;
+    }
+    .admin-disable-selected-btn {
+      background-color: #b5320b;
+    }
+    .admin-disable-selected-btn:hover {
+      background-color: #882709;
+    }
+    .admin-disable-selected-btn[disabled] {
+      opacity: 60%;
+      color: grey;
+      background-color: lightgray;
+      cursor: auto;
+    }
+    .admin-show-dates-btn {
+      background-color: green;
+    }
+    .admin-show-dates-btn:hover {
+      background-color: rgb(4, 89, 4);
+    }
   }
 
   @media screen and (max-width: 455px) {
