--- a/src/components/ContactMe/ContactMe.scss
+++ b/src/components/ContactMe/ContactMe.scss
@@ -78,7 +78,7 @@
         border: 1px solid #dbb898;
         border-radius: 7px;
       }
-      input[type="text"],
+      input,
       textarea {
         background-color: #f7f2eb;
         font-family: "Quicksand", sans-serif;
