--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -7,7 +7,7 @@
   align-items: flex-start;
   justify-content: center;
   gap: 18px;
-  background-image: url("/public/images/hero-image.jpg");
+  background-image: url("/public/images/Gizem2.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 60% 50%;
