--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -36,6 +36,7 @@
 }
 @media screen and (max-width: 1000px) {
   .about-me .about-me--main-container {
+    max-width: 450px;
     flex-direction: column;
     align-items: center;
     gap: 60px;
@@ -43,5 +44,10 @@
   .about-me .about-me--main-container .about-me--image,
 .about-me .about-me--main-container .about-me--pharagraph {
     min-width: 100%;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .about-me {
+    align-items: center;
   }
 }/*# sourceMappingURL=AboutMe.css.map */
