--- a/src/components/AboutMe/AboutMe.scss
+++ b/src/components/AboutMe/AboutMe.scss
@@ -23,7 +23,6 @@
       min-width: 30%;
       max-width: 40%;
       height: auto;
-      // min-width: 40%;
     }
     .about-me--image {
       object-fit: cover;
@@ -39,14 +38,17 @@
     }
 
     @media screen and (max-width: 1000px) {
+      max-width: 450px;
+      flex-direction: column;
+      align-items: center;
+      gap: 60px;
       .about-me--image,
       .about-me--pharagraph {
         min-width: 100%;
       }
-
-      flex-direction: column;
-      align-items: center;
-      gap: 60px;
     }
+  }
+  @media screen and (max-width: 1000px) {
+    align-items: center;
   }
 }
