--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -27,6 +27,9 @@
 }
 .blog .blog--articles .blog--article {
   width: auto;
+  z-index: 4;
+  flex-basis: 50%;
+  flex-grow: 1;
   border: 2px solid #bf9773;
   border-radius: 30px;
   overflow: hidden;
@@ -34,8 +37,16 @@
   transition-duration: 0.2s;
   transition-timing-function: ease-in-out;
 }
-.blog .blog--articles .blog--article .blog--image {
+.blog .blog--articles .blog--article .blog-img-container {
+  height: 200px;
+  overflow: hidden;
+}
+.blog .blog--articles .blog--article .blog-img-container .blog--image {
   max-width: 100%;
+  height: auto;
+  min-height: 250px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .blog .blog--articles .blog--article .blog-article--title {
   padding-top: 20px;
@@ -50,8 +61,33 @@
 .blog .blog--articles .blog--article:hover {
   scale: 1.05;
 }
-@media screen and (max-width: 865px) {
+@media screen and (max-width: 1000px) {
   .blog .blog--articles {
     flex-direction: column;
+    align-items: center;
   }
+  .blog .blog--articles .blog--article {
+    max-width: 500px;
+  }
+  .blog .blog--articles .blog--article .blog-img-container {
+    height: auto;
+  }
+}
+.blog .all-articles-btn {
+  height: 50px;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  margin: 40px auto 0 auto;
+  padding: 13px;
+  background-color: #bf9773;
+  border-radius: 6px;
+  font-weight: 600;
+  font-size: 18px;
+  color: white;
+  transition-duration: 0.2s;
+  transition-timing-function: ease-in-out;
+}
+.blog .all-articles-btn:hover {
+  background-color: #dbb898;
 }/*# sourceMappingURL=Blog.css.map */
