--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -11,7 +11,7 @@
 
   gap: 18px;
 
-  background-image: url("/public/images/hero-image.jpg");
+  background-image: url("/public/images/Gizem2.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 60% 50%;
